tests/snapshots/e2e__feature_tests__uninstall__Fish.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
fnm env | source
fnm install 12.0.0
fnm alias 12.0.0 hello
fnm ls | grep v12.0.0 | grep hello
fnm uninstall hello
if test (fnm ls) != "* system"
    echo 'Expected fnm ls to be "* system", Got: '(fnm ls)
    exit 1
end
