tests/snapshots/e2e__feature_tests__uninstall__Zsh.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env)"
fnm install 12.0.0
fnm alias 12.0.0 hello
fnm ls | grep v12.0.0 | grep hello
fnm uninstall hello
if [ "$(fnm ls)" != "* system" ]; then
    echo 'Expected fnm ls to be "* system", Got: '"$(fnm ls)"
    exit 1
fi
